--- a/pages/index.html
+++ b/pages/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="author" content="Aiden Mitchell">
-        <meta name="description" content="Triple AI">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="author" content="Aiden Mitchell" />
+    <meta name="description" content="Triple AI" />
 
-        <title>Welcome</title>
+    <title>Welcome</title>
 
-        <link rel="stylesheet" href="../css/index.css" type="text/css">
+    <link rel="stylesheet" href="../css/index.css" type="text/css" />
+    <link rel="stylesheet" href="../css/global.css" type="text/css" />
+  </head>
 
-    </head>
-    
-    <body> 
-        
-        <div class="box">
-            <h1>AAAI</h1>
-            <button>ENTER</button>
-
-        </div>
-
-    </body>
+  <body>
+    <div class="box">
+      <h1>AAAI</h1>
+      <button>ENTER</button>
+    </div>
+    <script src="../scripts/index.js"></script>
+  </body>
 </html>
